JOGL setup and spinning cube